--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.115.11"
 uvicorn = "^0.34.0"
 sqlalchemy = "^2.0.39"
 pydantic = "^2.10.6"
+typer = "^0.15.2"
+pydantic-settings = "^2.8.1"
 
 
 [build-system]
