--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.39"
 pydantic = "^2.10.6"
 typer = "^0.15.2"
 pydantic-settings = "^2.8.1"
+colorlog = "^6.9.0"
 
 
 [build-system]
